Applying PR feedback
Signed-off-by: James Melville <jamesmelville@gmail.com>